--- a/views/index.jade
+++ b/views/index.jade
@@ -59,16 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://nushackers.org/')
-                p NUS Hackers
-                  span on 15 Mar
-                p.tagline  Getting Started with Open-Source
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
-                p HTML5 Series - Chapter 4: It's all in the details...
-                  span on 18 Mar
-                p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
-            li
               a(href='https://www.facebook.com/events/428106230608753')
                 p DestrActions 2013-03 SG
                   span on 19 Mar
@@ -79,15 +69,25 @@ html(lang='en')
                   span on 20 Mar
                 p.tagline  Creating and Querying Views
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/109637962/')
+                p Book Club: Effective JavaScript Chapter 2
+                  span on 21 Mar
+                p.tagline  Chapter Two of Effective JavaScript: Variable Scope
+            li
               a(href='http://nushackers.org/')
                 p NUS Hackers
                   span on 22 Mar
                 p.tagline  The Unix Philosophy, Automating your command line workflow with Make
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
-                p HTML5 Series - Chapter 5: ... so tiny details
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
+                p HTML5 Series - Chapter 4: It's all in the details...
                   span on 27 Mar
-                p.tagline  Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
+                p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
+            //- li
+            //-   a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
+            //-     p HTML5 Series - Chapter 5: ... so tiny details
+            //-       span on 27 Mar
+            //-     p.tagline  Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/105135012/')
                 p AirAsia Expedia and Running R-in Database
