--- a/views/index.jade
+++ b/views/index.jade
@@ -59,11 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/428106230608753')
-                p DestrActions 2013-03 SG
-                  span on 19 Mar
-                p.tagline  Another round of design challenges to be tackled. Bring your crazy ideas!
-            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202232/')
                 p CouchDB Day 2
                   span on 20 Mar
@@ -73,6 +68,11 @@ html(lang='en')
                 p Book Club: Effective JavaScript Chapter 2
                   span on 21 Mar
                 p.tagline  Chapter Two of Effective JavaScript: Variable Scope
+            li
+              a(href='http://jfdi-webdev-twitter.eventbrite.com/')
+                p Web Development: tools to use in 2013
+                  span on 21 Mar
+                p.tagline  Tools, frameworks & libraries to use build light weight MVPs and test your problem hypotheses
             li
               a(href='http://nushackers.org/')
                 p NUS Hackers
