--- a/views/index.jade
+++ b/views/index.jade
@@ -59,45 +59,50 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202232/')
-                p CouchDB Day 2
-                  span on 20 Mar
-                p.tagline  Creating and Querying Views
+              a(href='https://www.facebook.com/events/348308188619339/')
+                p Front-end Developers User Group Meet up
+                  span on 25 Mar
+                p.tagline  Building websites for Retina(HiDPI) devices, ShadowDOM
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/109637962/')
-                p Book Club: Effective JavaScript Chapter 2
-                  span on 21 Mar
-                p.tagline  Chapter Two of Effective JavaScript: Variable Scope
+              a(href='https://www.facebook.com/events/164726430344342/')
+                p iOS Dev Scout # March Meetup
+                  span on 25 Mar
+                p.tagline  iOS
             li
-              a(href='http://jfdi-webdev-twitter.eventbrite.com/')
-                p Web Development: tools to use in 2013
-                  span on 21 Mar
-                p.tagline  Tools, frameworks & libraries to use build light weight MVPs and test your problem hypotheses
-            li
-              a(href='http://nushackers.org/')
-                p NUS Hackers
-                  span on 22 Mar
-                p.tagline  The Unix Philosophy, Automating your command line workflow with Make
+              a(href='http://www.meetup.com/Agile-Singapore/events/110074622/')
+                p Mar/2013 - Open Space
+                  span on 25 Mar
+                p.tagline  Iteration, Waterfall to Agile, ScrumMasters
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
                 p HTML5 Series - Chapter 4: It's all in the details...
                   span on 27 Mar
                 p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
-            //- li
-            //-   a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
-            //-     p HTML5 Series - Chapter 5: ... so tiny details
-            //-       span on 27 Mar
-            //-     p.tagline  Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/105135012/')
                 p AirAsia Expedia and Running R-in Database
                   span on 27 Mar
                 p.tagline  AirAsia - Expedia, In-Database Analytics
             li
+              a(href='https://www.facebook.com/events/146053338895607/')
+                p Raspberry Jam SG #4
+                  span on 5 Apr
+                p.tagline  RaspberryPi, Show & Tell
+            li
               a(href='http://www.superhappydevhouse.sg/w/page/35369026/FrontPage')
                 p SuperHappyDevHouse SHDHSG#3
                   span on 6 Apr
                 p.tagline Super party for the geeky
+            li
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/108941362/')
+                p SC Düsseldorf visiting Singapore
+                  span on 10 Apr
+                p.tagline Dojo, TDD or Achitectural Kata
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
+                p Healthcare Six Sigma with R
+                  span on 25 Apr
+                p.tagline HealthCare Six Sigma with R
         section
           h3 open source
           ul.open-list.second
