--- a/views/index.jade
+++ b/views/index.jade
@@ -59,21 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/348308188619339/')
-                p Front-end Developers User Group Meet up
-                  span on 25 Mar
-                p.tagline  Building websites for Retina(HiDPI) devices, ShadowDOM
-            li
-              a(href='https://www.facebook.com/events/164726430344342/')
-                p iOS Dev Scout # March Meetup
-                  span on 25 Mar
-                p.tagline  iOS
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/110074622/')
-                p Mar/2013 - Open Space
-                  span on 25 Mar
-                p.tagline  Iteration, Waterfall to Agile, ScrumMasters
-            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
                 p HTML5 Series - Chapter 4: It's all in the details...
                   span on 27 Mar
@@ -83,6 +68,21 @@ html(lang='en')
                 p AirAsia Expedia and Running R-in Database
                   span on 27 Mar
                 p.tagline  AirAsia - Expedia, In-Database Analytics
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/110753452/')
+                p Book Club: Effective JavaScript Chapter 3
+                  span on 28 Mar
+                p.tagline  Chapter 3 book discussion from Effective JavaScript
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/111132882/')
+                p talk.js
+                  span on 1 Apr
+                p.tagline  Unit testing, functional testing, code hinting, FirefoxOS, JavaScript functions, Vagrant & Puppet, ASM.js
+            li
+              a(href='https://www.facebook.com/events/368957849886373/')
+                p Singapore Python Platoon Weekly Meetup
+                  span on 1 Apr
+                p.tagline  Show up and meet other python programmers, work on a project or learn how to program python!
             li
               a(href='https://www.facebook.com/events/146053338895607/')
                 p Raspberry Jam SG #4
