--- a/views/index.jade
+++ b/views/index.jade
@@ -59,21 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
-                p HTML5 Series - Chapter 4: It's all in the details...
-                  span on 27 Mar
-                p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/105135012/')
-                p AirAsia Expedia and Running R-in Database
-                  span on 27 Mar
-                p.tagline  AirAsia - Expedia, In-Database Analytics
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/110753452/')
-                p Book Club: Effective JavaScript Chapter 3
-                  span on 28 Mar
-                p.tagline  Chapter 3 book discussion from Effective JavaScript
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/111132882/')
                 p talk.js
                   span on 1 Apr
@@ -83,6 +68,11 @@ html(lang='en')
                 p Singapore Python Platoon Weekly Meetup
                   span on 1 Apr
                 p.tagline  Show up and meet other python programmers, work on a project or learn how to program python!
+            li
+              a(href='https://www.facebook.com/events/143888559122127')
+                p Intro to Firefox OS app development
+                  span on 4 Apr
+                p.tagline  how to develop your very first Firefox OS app! Also meet fellow Firefox OS enthusiasts.
             li
               a(href='https://www.facebook.com/events/146053338895607/')
                 p Raspberry Jam SG #4
@@ -99,10 +89,26 @@ html(lang='en')
                   span on 10 Apr
                 p.tagline Dojo, TDD or Achitectural Kata
             li
+              a(href='http://www.meetup.com/devops-singapore/events/111738572/')
+                p DevOps Singapore Meetup #11: Hybrid Cloud and CloudBursting
+                  span on 10 Apr
+                p.tagline hybrid cloud and cloudbursting
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
+                p HTML5 Series - Chapter 5: ... so tiny details
+                  span on 12 Apr
+                p.tagline Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
                 p Healthcare Six Sigma with R
                   span on 25 Apr
                 p.tagline HealthCare Six Sigma with R
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
+                p HTML5 Series - Chapter 6: ... so tricky details !
+                  span on 26 Apr
+                p.tagline . JavaScript engines what's new, requestAnimationFrame, Web-based protocol handlers
+
         section
           h3 open source
           ul.open-list.second
