--- a/views/index.jade
+++ b/views/index.jade
@@ -84,6 +84,11 @@ html(lang='en')
                   span on 6 Apr
                 p.tagline Super party for the geeky
             li
+              a(href='https://www.facebook.com/events/350382831729441/')
+                p Team Ubuntu Singapore Apr 2013 Meetup
+                  span on 8 Apr
+                p.tagline Ubuntu Touch and designing apps for it
+            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/108941362/')
                 p SC Düsseldorf visiting Singapore
                   span on 10 Apr
@@ -107,7 +112,12 @@ html(lang='en')
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 26 Apr
-                p.tagline . JavaScript engines what's new, requestAnimationFrame, Web-based protocol handlers
+                p.tagline JavaScript engines what's new, requestAnimationFrame, Web-based protocol handlers
+            li
+              a(href='https://www.facebook.com/events/351452121642236')
+                p Singapore PHP User Group Meetup (April 2013)
+                  span on 30 Apr
+                p.tagline Super Charge your dev environment with Vagrant and Puppet
 
         section
           h3 open source
