--- a/views/index.jade
+++ b/views/index.jade
@@ -79,6 +79,11 @@ html(lang='en')
                   span on 5 Apr
                 p.tagline  RaspberryPi, Show & Tell
             li
+              a(href='http://nushackers.org/')
+                p NUS Hackers
+                  span on 5 Apr
+                p.tagline  Challenges in Signal Processing, Building real time apps with meteor.js
+            li
               a(href='http://www.superhappydevhouse.sg/w/page/35369026/FrontPage')
                 p SuperHappyDevHouse SHDHSG#3
                   span on 6 Apr
