--- a/views/index.jade
+++ b/views/index.jade
@@ -59,11 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/143888559122127')
-                p Intro to Firefox OS app development
-                  span on 4 Apr
-                p.tagline  how to develop your very first Firefox OS app! Also meet fellow Firefox OS enthusiasts.
-            li
               a(href='https://www.facebook.com/events/146053338895607/')
                 p Raspberry Jam SG #4
                   span on 5 Apr
@@ -84,6 +79,11 @@ html(lang='en')
                   span on 8 Apr
                 p.tagline Ubuntu Touch and designing apps for it
             li
+              a(href='http://ccsg0413.eventbrite.com/')
+                p Creative Crew April Meeting 2013
+                  span on 9 Apr
+                p.tagline Basic Audio Recording System, Why you should learn coding
+            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/108941362/')
                 p SC Düsseldorf visiting Singapore
                   span on 10 Apr
@@ -98,6 +98,11 @@ html(lang='en')
                 p HTML5 Series - Chapter 5: ... so tiny details
                   span on 12 Apr
                 p.tagline Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
+            li
+              a(href='https://www.facebook.com/events/235453799926776/')
+                p HacKidemia Singapore Volunteers Meetup
+                  span on 12 Apr
+                p.tagline HacKidemia is a platform for community-driven learning activities that encourage kids to embrace 'learning-by-making'
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
                 p Healthcare Six Sigma with R
