events and open source

--- a/views/index.jade
+++ b/views/index.jade
@@ -89,6 +89,16 @@ html(lang='en')
                   span on 12 Apr
                 p.tagline HacKidemia is a platform for community-driven learning activities that encourage kids to embrace 'learning-by-making'
             li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/112626872/')
+                p Singapore Ruby Group April Meetup
+                  span on 16 Apr
+                p.tagline Rail 2.x app to Rails 3.x app, scaling/caching strategy or using Rails 4 stuff? Talk about it!
+            li
+              a(href='https://www.facebook.com/events/160601547432676/')
+                p iOS Dev Scout # April Meetup
+                  span on 23 Apr
+                p.tagline Agenda & Speakers: TBD
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
                 p Healthcare Six Sigma with R
                   span on 25 Apr
