--- a/views/index.jade
+++ b/views/index.jade
@@ -104,6 +104,11 @@ html(lang='en')
                   span on 25 Apr
                 p.tagline HealthCare Six Sigma with R
             li
+              a(href='https://www.facebook.com/events/327109547412101/')
+                p Singapore Node.JS User Group April Meetup
+                  span on 25 Apr
+                p.tagline Vagrant and more!
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 26 Apr
