--- a/views/index.jade
+++ b/views/index.jade
@@ -59,16 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://ccsg0413.eventbrite.com/')
-                p Creative Crew April Meeting 2013
-                  span on 9 Apr
-                p.tagline Basic Audio Recording System, Why you should learn coding
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/108941362/')
-                p SC Düsseldorf visiting Singapore
-                  span on 10 Apr
-                p.tagline Dojo, TDD or Achitectural Kata
-            li
               a(href='http://www.meetup.com/devops-singapore/events/111738572/')
                 p DevOps Singapore Meetup #11: Hybrid Cloud and CloudBursting
                   span on 10 Apr
@@ -83,6 +73,11 @@ html(lang='en')
                 p HacKidemia Singapore Volunteers Meetup
                   span on 12 Apr
                 p.tagline HacKidemia is a platform for community-driven learning activities that encourage kids to embrace 'learning-by-making'
+            li
+              a(href='https://cryptoparty.org/wiki/Singapore')
+                p Cryptoparty April Meetup
+                  span on 15 Apr
+                p.tagline Intro to basic crypographic skills!
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/112626872/')
                 p Singapore Ruby Group April Meetup
