--- a/views/index.jade
+++ b/views/index.jade
@@ -59,11 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/devops-singapore/events/111738572/')
-                p DevOps Singapore Meetup #11: Hybrid Cloud and CloudBursting
-                  span on 10 Apr
-                p.tagline hybrid cloud and cloudbursting
-            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
                 p HTML5 Series - Chapter 5: ... so tiny details
                   span on 12 Apr
@@ -83,6 +78,11 @@ html(lang='en')
                 p Singapore Ruby Group April Meetup
                   span on 16 Apr
                 p.tagline Rail 2.x app to Rails 3.x app, scaling/caching strategy or using Rails 4 stuff? Talk about it!
+            li
+              a(href='http://mad.ly/4119a3?pact=403597857338796094&fe=1')
+                p BlinkBl_nk
+                  span on 16 Apr
+                p.tagline Artisan Open Source Hardware (OSHW) and Animism: Totematons,  Open vs 公开 , Coding, Hacking, Tinkering
             li
               a(href='https://www.facebook.com/events/160601547432676/')
                 p iOS Dev Scout # April Meetup
