--- a/views/index.jade
+++ b/views/index.jade
@@ -64,6 +64,11 @@ html(lang='en')
                   span on 12 Apr
                 p.tagline Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
             li
+              a(href='http://nushackers.org/')
+                p NUS Hackers
+                  span on 12 Apr
+                p.tagline Building real time apps with meteor.js
+            li
               a(href='https://www.facebook.com/events/235453799926776/')
                 p HacKidemia Singapore Volunteers Meetup
                   span on 12 Apr
