--- a/views/index.jade
+++ b/views/index.jade
@@ -59,60 +59,50 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
-                p HTML5 Series - Chapter 5: ... so tiny details
-                  span on 12 Apr
-                p.tagline Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
-            li
-              a(href='http://nushackers.org/')
-                p NUS Hackers
-                  span on 12 Apr
-                p.tagline Building real time apps with meteor.js
-            li
-              a(href='https://www.facebook.com/events/235453799926776/')
-                p HacKidemia Singapore Volunteers Meetup
-                  span on 12 Apr
-                p.tagline HacKidemia is a platform for community-driven learning activities that encourage kids to embrace 'learning-by-making'
-            li
               a(href='https://cryptoparty.org/wiki/Singapore')
                 p Cryptoparty April Meetup
                   span on 15 Apr
-                p.tagline Intro to basic crypographic skills!
+                p.tagline by Cryptoparty
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/112626872/')
-                p Singapore Ruby Group April Meetup
+                p April Meetup
                   span on 16 Apr
-                p.tagline Rail 2.x app to Rails 3.x app, scaling/caching strategy or using Rails 4 stuff? Talk about it!
+                p.tagline by Singapore Ruby Group
             li
               a(href='http://mad.ly/4119a3?pact=403597857338796094&fe=1')
-                p BlinkBl_nk
+                p Open Hardware Edition blinkBL_NK #28
                   span on 16 Apr
-                p.tagline Artisan Open Source Hardware (OSHW) and Animism: Totematons,  Open vs 公开 , Coding, Hacking, Tinkering
+                p.tagline by blinkBL_NK
             li
               a(href='https://www.facebook.com/events/160601547432676/')
                 p iOS Dev Scout # April Meetup
                   span on 23 Apr
-                p.tagline Agenda & Speakers: TBD
+                p.tagline by iOS Dev Scout
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
+                p HTML5 Series - Chapter 5: ... so tiny details
+                  span on 24 Apr
+                p.tagline by HTML5Rocks@SG
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
                 p Healthcare Six Sigma with R
                   span on 25 Apr
-                p.tagline HealthCare Six Sigma with R
+                p.tagline by R User Group - Singapore (RUGS)
             li
               a(href='https://www.facebook.com/events/327109547412101/')
                 p Singapore Node.JS User Group April Meetup
                   span on 25 Apr
-                p.tagline Vagrant and more!
+                p.tagline by Singapore Node.JS User Group
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 26 Apr
-                p.tagline JavaScript engines what's new, requestAnimationFrame, Web-based protocol handlers
+                p.tagline by HTML5Rocks@SG
             li
               a(href='https://www.facebook.com/events/351452121642236')
                 p Singapore PHP User Group Meetup (April 2013)
                   span on 30 Apr
-                p.tagline Super Charge your dev environment with Vagrant and Puppet
+                p.tagline by Singapore PHP User Group
 
         section
           h3 open source
