--- a/views/index.jade
+++ b/views/index.jade
@@ -59,6 +59,11 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/114250302/')
+                p Book Club: Effective JavaScript Chapter 3 (Part II)
+                  span on 18 Apr
+                p.tagline by Singapore JS
+            li
               a(href='https://www.facebook.com/events/160601547432676/')
                 p iOS Dev Scout # April Meetup
                   span on 23 Apr
