--- a/views/index.jade
+++ b/views/index.jade
@@ -59,10 +59,10 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/114250302/')
-                p Book Club: Effective JavaScript Chapter 3 (Part II)
-                  span on 18 Apr
-                p.tagline by Singapore JS
+              a(href='http://nushackers.org/2013/04/friday-hacks-48-apr-19/')
+                p Friday Hacks #48, Apr 19
+                  span on 19 Apr
+                p.tagline by NUS Hackers
             li
               a(href='https://www.facebook.com/events/160601547432676/')
                 p iOS Dev Scout # April Meetup
