--- a/views/index.jade
+++ b/views/index.jade
@@ -59,11 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://nushackers.org/2013/04/friday-hacks-48-apr-19/')
-                p Friday Hacks #48, Apr 19
-                  span on 19 Apr
-                p.tagline by NUS Hackers
-            li
               a(href='https://www.facebook.com/events/160601547432676/')
                 p iOS Dev Scout # April Meetup
                   span on 23 Apr
@@ -79,15 +74,30 @@ html(lang='en')
                   span on 25 Apr
                 p.tagline by R User Group - Singapore (RUGS)
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/115390122/')
+                p Book Club: Effective JavaScript Chapter 4
+                  span on 25 Apr
+                p.tagline by Singapore JS
+            li
               a(href='https://www.facebook.com/events/327109547412101/')
                 p Singapore Node.JS User Group April Meetup
                   span on 25 Apr
                 p.tagline by Singapore Node.JS User Group
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
+                p National Environment Agency hosts Clean&Green Hackathon 2013!
+                  span on 26 Apr
+                p.tagline by DevOps Singapore
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/112618312/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 26 Apr
                 p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/111114332/')
+                p Apr/2013 - Open Space
+                  span on 29 Apr
+                p.tagline by Agile Singapore
             li
               a(href='https://www.facebook.com/events/351452121642236')
                 p Singapore PHP User Group Meetup (April 2013)
