--- a/views/index.jade
+++ b/views/index.jade
@@ -84,15 +84,10 @@ html(lang='en')
                   span on 25 Apr
                 p.tagline by Singapore Node.JS User Group
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
+              a(href='http://www.meetup.com/devops-singapore/events/112618312/')
                 p National Environment Agency hosts Clean&Green Hackathon 2013!
                   span on 26 Apr
                 p.tagline by DevOps Singapore
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/112618312/')
-                p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 26 Apr
-                p.tagline by HTML5Rocks@SG
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/111114332/')
                 p Apr/2013 - Open Space
@@ -103,6 +98,11 @@ html(lang='en')
                 p Singapore PHP User Group Meetup (April 2013)
                   span on 30 Apr
                 p.tagline by Singapore PHP User Group
+            li
+              a(href='')
+                p http://www.meetup.com/HTML5Rocks-SG/events/93221982/
+                  span on 24 May
+                p.tagline by HTML5Rocks@SG
 
         section
           h3 open source
