--- a/views/index.jade
+++ b/views/index.jade
@@ -99,8 +99,8 @@ html(lang='en')
                   span on 30 Apr
                 p.tagline by Singapore PHP User Group
             li
-              a(href='')
-                p http://www.meetup.com/HTML5Rocks-SG/events/93221982/
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
+                p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 24 May
                 p.tagline by HTML5Rocks@SG
 
