--- a/views/index.jade
+++ b/views/index.jade
@@ -59,36 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/160601547432676/')
-                p iOS Dev Scout # April Meetup
-                  span on 23 Apr
-                p.tagline by iOS Dev Scout
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
-                p HTML5 Series - Chapter 5: ... so tiny details
-                  span on 24 Apr
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/110492252/')
-                p Healthcare Six Sigma with R
-                  span on 25 Apr
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/115390122/')
-                p Book Club: Effective JavaScript Chapter 4
-                  span on 25 Apr
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/327109547412101/')
-                p Singapore Node.JS User Group April Meetup
-                  span on 25 Apr
-                p.tagline by Singapore Node.JS User Group
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/112618312/')
-                p National Environment Agency hosts Clean&Green Hackathon 2013!
-                  span on 26 Apr
-                p.tagline by DevOps Singapore
-            li
               a(href='http://www.meetup.com/Agile-Singapore/events/111114332/')
                 p Apr/2013 - Open Space
                   span on 29 Apr
@@ -99,9 +69,19 @@ html(lang='en')
                   span on 30 Apr
                 p.tagline by Singapore PHP User Group
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/116409232/')
+                p talk.js
+                  span on 6 May
+                p.tagline by SingaporeJS
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 24 May
+                  span on 29 May
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
+                p HTML5 Series - Chapter 7: Oh so precious Device !
+                  span on 7 Jun
                 p.tagline by HTML5Rocks@SG
 
         section
