--- a/views/index.jade
+++ b/views/index.jade
@@ -64,6 +64,11 @@ html(lang='en')
                   span on 29 Apr
                 p.tagline by Agile Singapore
             li
+              a(href='https://www.facebook.com/events/451255684961940')
+                p SPP Python Monday
+                  span on 29 Apr
+                p.tagline by Singapore Python Platoon
+            li
               a(href='https://www.facebook.com/events/351452121642236')
                 p Singapore PHP User Group Meetup (April 2013)
                   span on 30 Apr
