--- a/views/index.jade
+++ b/views/index.jade
@@ -59,25 +59,25 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Agile-Singapore/events/111114332/')
-                p Apr/2013 - Open Space
-                  span on 29 Apr
-                p.tagline by Agile Singapore
+              a(href='http://ccsg14may.eventbrite.com/')
+                p Creative Crew Talks - May Meeting 2013
+                  span on 14 May
+                p.tagline by Creative Crew Singapore
             li
-              a(href='https://www.facebook.com/events/451255684961940')
-                p SPP Python Monday
-                  span on 29 Apr
-                p.tagline by Singapore Python Platoon
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/116441382/')
+                p May Meetup
+                  span on 14 May
+                p.tagline by Singapore Ruby Group
             li
-              a(href='https://www.facebook.com/events/351452121642236')
-                p Singapore PHP User Group Meetup (April 2013)
-                  span on 30 Apr
-                p.tagline by Singapore PHP User Group
+              a(href='http://www.creativedge.com.sg/preview/cxa2013/edm/')
+                p code::XtremeApps:: 2013 Competition Launch
+                  span on 20 May
+                p.tagline by code::XtremeApps
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/116409232/')
-                p talk.js
-                  span on 6 May
-                p.tagline by SingaporeJS
+              a(href='https://www.facebook.com/events/191484481001082/')
+                p iOS Dev Scout # May Meetup
+                  span on 20 May
+                p.tagline by iOS Dev Scout
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
