--- a/views/index.jade
+++ b/views/index.jade
@@ -69,6 +69,11 @@ html(lang='en')
                   span on 14 May
                 p.tagline by Singapore Ruby Group
             li
+              a(href='http://www.eventbrite.com/event/6587512427')
+                p Camera Raw Workshop
+                  span on 18 May
+                p.tagline by Creative Crew Singapore
+            li
               a(href='http://www.creativedge.com.sg/preview/cxa2013/edm/')
                 p code::XtremeApps:: 2013 Competition Launch
                   span on 20 May
