--- a/views/index.jade
+++ b/views/index.jade
@@ -59,6 +59,11 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/118160272/')
+                p Book Club: Effective JavaScript Chapter 4 (Part II)
+                  span on 9 May
+                p.tagline by Singapore JS
+            li
               a(href='http://ccsg14may.eventbrite.com/')
                 p Creative Crew Talks - May Meeting 2013
                   span on 14 May
