--- a/views/index.jade
+++ b/views/index.jade
@@ -59,20 +59,31 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/118160272/')
-                p Book Club: Effective JavaScript Chapter 4 (Part II)
-                  span on 9 May
-                p.tagline by Singapore JS
+              a(href='http://www.meetup.com/Agile-Singapore/events/117922382/')
+                p Mini-Coderetreat
+                  span on 10 May
+                p.tagline by Agile Singapore
             li
               a(href='http://ccsg14may.eventbrite.com/')
                 p Creative Crew Talks - May Meeting 2013
                   span on 14 May
                 p.tagline by Creative Crew Singapore
             li
+              a(href='http://www.meetup.com/devops-singapore/events/118330622/')
+                p Health UP hackathon coming soon!
+                  span on 14 May
+                p.tagline by DevOps Singapore
+            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/116441382/')
                 p May Meetup
                   span on 14 May
                 p.tagline by Singapore Ruby Group
+
+            li
+              a(href='http://mad.ly/afbab3')
+                p BlinkBl_nk May
+                  span on 15 May
+                p.tagline by BlinkBl_nk
             li
               a(href='http://www.eventbrite.com/event/6587512427')
                 p Camera Raw Workshop
@@ -89,10 +100,25 @@ html(lang='en')
                   span on 20 May
                 p.tagline by iOS Dev Scout
             li
+              a(href='https://www.facebook.com/events/263705100440913/')
+                p Singapore Node.JS User Group May Meetup
+                  span on 21 May
+                p.tagline by Singapore Node.JS User Group
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 29 May
                 p.tagline by HTML5Rocks@SG
+            li
+              a(href='https://www.facebook.com/events/531996526842101/')
+                p SG Makers Movement Meetup
+                  span on 30 May
+                p.tagline by SG Makers Movement
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/118128802/')
+                p Producing repetitive reports/dashboards using R
+                  span on 5 Jun
+                p.tagline by R User Group - Singapore (RUGS)
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
                 p HTML5 Series - Chapter 7: Oh so precious Device !
