--- a/views/index.jade
+++ b/views/index.jade
@@ -79,6 +79,11 @@ html(lang='en')
                   span on 21 May
                 p.tagline by Singapore Node.JS User Group
             li
+              a(href='https://www.facebook.com/events/389499624498369')
+                p Singapore PHP User Group Meetup (May 2013)
+                  span on 28 May
+                p.tagline by  Singapore PHP User Group
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 29 May
