--- a/views/index.jade
+++ b/views/index.jade
@@ -58,11 +58,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.eventbrite.com/event/6587512427')
-                p Camera Raw Workshop
-                  span on 18 May
-                p.tagline by Creative Crew Singapore
+
             li
               a(href='http://www.creativedge.com.sg/preview/cxa2013/edm/')
                 p code::XtremeApps:: 2013 Competition Launch
@@ -78,6 +74,11 @@ html(lang='en')
                 p Singapore Node.JS User Group May Meetup
                   span on 21 May
                 p.tagline by Singapore Node.JS User Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/119469572/')
+                p Book Club: Effective JavaScript
+                  span on 23 May
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/389499624498369')
                 p Singapore PHP User Group Meetup (May 2013)
