--- a/views/index.jade
+++ b/views/index.jade
@@ -75,6 +75,11 @@ html(lang='en')
                   span on 21 May
                 p.tagline by Singapore Node.JS User Group
             li
+              a(href='https://www.facebook.com/events/145617902292741/')
+                p DestrActions 2013-05 SG
+                  span on 21 May
+                p.tagline by DestrActions SG
+            li
               a(href='http://www.meetup.com/Singapore-JS/events/119469572/')
                 p Book Club: Effective JavaScript
                   span on 23 May
