fixed heading font

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -1,6 +1,6 @@
 // ----- Fonts ----- //
 $sans: 'Open Sans', Helvetica Neue, sans-serif
-$serif: 'Vollkorn', sans-serif
+$serif: 'Roboto Slab', serif
 
 body
 	font-size: 16px //12pt
@@ -14,13 +14,15 @@ h1, h2, h3, h4, h5, h6
 h1
 	// we build
 	font-size: 10rem
-	opacity: 0
+	font-size: 14vw
 	font-family: $serif
 	font-weight: 700
 	color: white
 	text-align: center
 	text-shadow: 0 0 4px white, 0 2px 26px rgba(0, 0, 0, 0.5)
 	letter-spacing: 0.5rem
+	line-height: 1.2em
+	margin: 0
 
 h2
 	// tagline
@@ -29,7 +31,8 @@ h2
 	font-family: $sans
 	color: $yellow
 	font-weight: 200
-	margin-top: -3%
+	margin: 0
+	line-height: 1.2em
 
 h3
 	// open event and open source
