--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -9,6 +9,7 @@
   footer p
     width: 100%
 
+// single column
 @media only screen and (max-width: 720px)
   h1
     letter-spacing: 0.1rem
@@ -23,3 +24,7 @@
     border-right: none
   footer p
     font-size: 1rem
+
+@media only screen and (max-width: 380px)
+  h1
+    font-size: 18vw
