--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ html(lang='en')
     meta(property='og:description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
     meta(property='og:type', content='website')
 
-    link(href='http://fonts.googleapis.com/css?family=Vollkorn:400,700|Open+Sans', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='public/css/style.css')
 
     link(rel='apple-touch-icon', href='public/apple-touch-icon.png')
@@ -34,9 +34,6 @@ html(lang='en')
     link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
 
     script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
-
-    //- Gridline for dev environment
-    //- link(rel='stylesheet', href='public/css/hugrid.css')
 
   body
 
