--- a/views/index.jade
+++ b/views/index.jade
@@ -55,12 +55,11 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/119469572/')
-                p Book Club: Effective JavaScript
-                  span on 23 May
-                p.tagline by Singapore JS
+              a(href='http://www.meetup.com/Agile-Singapore/events/116906392/')
+                p May/2013 - Open Space (Different Venue!)
+                  span on 27 May
+                p.tagline by  Agile Singapore
             li
               a(href='https://www.facebook.com/events/389499624498369')
                 p Singapore PHP User Group Meetup (May 2013)
@@ -82,9 +81,29 @@ html(lang='en')
                   span on 5 Jun
                 p.tagline by R User Group - Singapore (RUGS)
             li
+              a(href='http://www.meetup.com/IxDA-Singapore/events/120449312/')
+                p IXD Workshop: Introduction to Content Modeling
+                  span on 6 Jun
+                p.tagline by IxDA Singapore
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
                 p HTML5 Series - Chapter 7: Oh so precious Device !
                   span on 7 Jun
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='https://www.facebook.com/events/351016308354057')
+                p WWDC Live @ The Pragmatic Lab
+                  span on 10 Jun
+                p.tagline by The Pragmatic Lab
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/119472542/')
+                p An evening with Jean Tabaka
+                  span on 12 Jun
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
+                p HTML5 Series - Chapter 8: It's also about style !
+                  span on 21 Jun
                 p.tagline by HTML5Rocks@SG
 
         section
