added days of the week to events. fixes #13.

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,52 +58,57 @@ html(lang='en')
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/116906392/')
                 p May/2013 - Open Space (Different Venue!)
-                  span on 27 May
+                  span on 27 May, Mon
                 p.tagline by  Agile Singapore
             li
               a(href='https://www.facebook.com/events/389499624498369')
                 p Singapore PHP User Group Meetup (May 2013)
-                  span on 28 May
+                  span on 28 May, Tue
                 p.tagline by  Singapore PHP User Group
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 29 May
+                  span on 29 May, Wed
                 p.tagline by HTML5Rocks@SG
             li
               a(href='https://www.facebook.com/events/531996526842101/')
                 p SG Makers Movement Meetup
-                  span on 30 May
+                  span on 30 May, Thu
                 p.tagline by SG Makers Movement
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/119469602/')
+                p Book Club: Effective JavaScript
+                  span on 30 May, Thu
+                p.tagline by Singapore JS
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/118128802/')
                 p Producing repetitive reports/dashboards using R
-                  span on 5 Jun
+                  span on 5 Jun, Wed
                 p.tagline by R User Group - Singapore (RUGS)
             li
               a(href='http://www.meetup.com/IxDA-Singapore/events/120449312/')
                 p IXD Workshop: Introduction to Content Modeling
-                  span on 6 Jun
+                  span on 6 Jun, Thu
                 p.tagline by IxDA Singapore
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
                 p HTML5 Series - Chapter 7: Oh so precious Device !
-                  span on 7 Jun
+                  span on 7 Jun, Fri
                 p.tagline by HTML5Rocks@SG
             li
               a(href='https://www.facebook.com/events/351016308354057')
                 p WWDC Live @ The Pragmatic Lab
-                  span on 10 Jun
+                  span on 10 Jun, Mon
                 p.tagline by The Pragmatic Lab
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/119472542/')
                 p An evening with Jean Tabaka
-                  span on 12 Jun
+                  span on 12 Jun, Wed
                 p.tagline by Agile Singapore
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
                 p HTML5 Series - Chapter 8: It's also about style !
-                  span on 21 Jun
+                  span on 21 Jun, Fri
                 p.tagline by HTML5Rocks@SG
 
         section
@@ -123,61 +128,6 @@ html(lang='en')
             [hackerspace calendar](http://hackerspace.sg/calendar/hackerspacesg-events/) and
             [sge calendar](http://sge.io/calendar/)
       a(href='http://sayan.ee').credit handmade by sayanee
-
-    //- Gridline for dev environment
-    //- script(src='//raw.github.com/simanek/Heads-Up-Grid/master/headsupgrid/hugrid.js')
-    //- script
-    //-   definegrid = function() {
-    //-     var browserWidth = $(window).width();
-    //-     if (browserWidth >= 1001)
-    //-     {
-    //-       pageUnits = 'px';
-    //-       colUnits = 'px';
-    //-       pagewidth = 960;
-    //-       columns = 6;
-    //-       columnwidth = 140;
-    //-       gutterwidth = 24;
-    //-       pagetopmargin = 35;
-    //-       rowheight = 20;
-    //-       gridonload = 'off';
-    //-       makehugrid();
-    //-     }
-    //-     if (browserWidth <= 1000)
-    //-     {
-    //-       pageUnits = '%';
-    //-       colUnits = '%';
-    //-       pagewidth = 94;
-    //-       columns = 2;
-    //-       columnwidth = 48;
-    //-       gutterwidth = 4;
-    //-       pagetopmargin = 35;
-    //-       rowheight = 20;
-    //-       gridonload = 'off';
-    //-       makehugrid();
-    //-     }
-    //-     if (browserWidth <= 768)
-    //-     {
-    //-       pageUnits = '%';
-    //-       colUnits = '%';
-    //-       pagewidth = 96;
-    //-       columns = 2;
-    //-       columnwidth = 49;
-    //-       gutterwidth = 2;
-    //-       pagetopmargin = 35;
-    //-       rowheight = 20;
-    //-       gridonload = 'off';
-    //-       makehugrid();
-    //-     }
-    //-   }
-    //-   $(document).ready(function() {
-    //-     definegrid();
-    //-     setgridonload();
-    //-   });
-
-    //-   $(window).resize(function() {
-    //-     definegrid();
-    //-     setgridonresize();
-    //-   });
 
     script
       var _gaq = _gaq || [];
