podcast live section

--- a/public/css/foundation/layout.sass
+++ b/public/css/foundation/layout.sass
@@ -10,9 +10,9 @@
 
 *
 	box-sizing: border-box
-	// @include transition-property(all)
-	// @include transition-duration(0.2s)
-	// @include transition-timing-function(ease-in)
+	@include transition-property(all)
+	@include transition-duration(0.2s)
+	@include transition-timing-function(ease-in)
 
 body
 	background-color: white
@@ -38,7 +38,7 @@ header
 section
 	width: 49.5%
 	display: inline-block
-	padding: 60px 0 0 0
+	padding: 0
 	vertical-align: top
 
 footer
