--- a/views/index.jade
+++ b/views/index.jade
@@ -52,6 +52,11 @@ html(lang='en')
               li makers
       .main.container
 
+        div.live
+          h3 Catch We Build SG LIVE
+          p.countdown in 8 days 7 hours 32 seconds
+          p#livetime
+
         section
           h3 open events
           ul.open-list.first
