--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -1,4 +1,5 @@
 // ----- Fonts ----- //
+@include font-face('Social', fonts/social)
 $sans: 'Open Sans', Helvetica Neue, sans-serif
 $serif: 'Roboto Slab', serif
 
