--- a/views/index.jade
+++ b/views/index.jade
@@ -132,8 +132,17 @@ html(lang='en')
             [connections.sg](http://connections.sg/),
             [hackerspace calendar](http://hackerspace.sg/calendar/hackerspacesg-events/) and
             [sge calendar](http://sge.io/calendar/)
-      a(href='http://sayan.ee').credit handmade by sayanee
-
+      ul.social
+        li
+          a(href='https://twitter.com/intent/tweet?hashtags=webuildSGLive&original_referer=http%3A%2F%2Flive.webuild.sg%2F&text=@webuildsg&tw_p=tweetbutton')
+            &#xe286;
+        li
+          a(href='http://www.facebook.com/webuildsg')
+            &#xe227;
+        li
+          a(href='https://plus.google.com/115395182582724849094')
+           &#xe239;
+      </ul>
     script
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-37308530-1']);
