--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -24,6 +24,9 @@
     border-right: none
   footer p
     font-size: 1rem
+  .social
+    width: 100%
+    font-size: 10vw
 
 @media only screen and (max-width: 380px)
   h1
