--- a/views/index.jade
+++ b/views/index.jade
@@ -61,31 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Agile-Singapore/events/116906392/')
-                p May/2013 - Open Space (Different Venue!)
-                  span on 27 May, Mon
-                p.tagline by  Agile Singapore
-            li
-              a(href='https://www.facebook.com/events/389499624498369')
-                p Singapore PHP User Group Meetup (May 2013)
-                  span on 28 May, Tue
-                p.tagline by  Singapore PHP User Group
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221982/')
-                p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 29 May, Wed
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='https://www.facebook.com/events/531996526842101/')
-                p SG Makers Movement Meetup
-                  span on 30 May, Thu
-                p.tagline by SG Makers Movement
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/119469602/')
-                p Book Club: Effective JavaScript
-                  span on 30 May, Thu
-                p.tagline by Singapore JS
-            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/118128802/')
                 p Producing repetitive reports/dashboards using R
                   span on 5 Jun, Wed
@@ -115,6 +90,11 @@ html(lang='en')
                 p HTML5 Series - Chapter 8: It's also about style !
                   span on 21 Jun, Fri
                 p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://sg-hackidemia.eventbrite.sg/')
+                p HacKIDemia Singapore
+                  span on 29 Jun, Sat
+                p.tagline by William Hooi
 
         section
           h3 open source
