--- a/views/index.jade
+++ b/views/index.jade
@@ -86,6 +86,11 @@ html(lang='en')
                   span on 12 Jun, Wed
                 p.tagline by Agile Singapore
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/119469622/')
+                p Book Club: Dom Enlightenment
+                  span on 13 Jun, Thu
+                p.tagline by Singapore JS
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
                 p HTML5 Series - Chapter 8: It's also about style !
                   span on 21 Jun, Fri
