remove default values for countdown

--- a/views/index.jade
+++ b/views/index.jade
@@ -54,7 +54,7 @@ html(lang='en')
 
         div.live
           h3 Catch We Build SG LIVE
-          p.countdown in 8 days 7 hours 32 seconds
+          p.countdown
           p#livetime
 
         section
